# davinci-video-converter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.sh  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: build-deb.yml  ci-cd.yml  ci.yml  codeql.yml  release.yml  security.yml
output/: main
src/: converter.cpp  main.cpp  parser.cpp  validator.cpp
src/include/: config.hpp  converter.hpp  parser.hpp  validator.hpp
tests/: CMakeLists.txt  test_converter.cpp  test_parser.cpp  test_validator.cpp
